--- a/css/queries.css
+++ b/css/queries.css
@@ -27,6 +27,12 @@
     font-size: 4.4rem;
   }
 
+  .section-hero {
+    height: 750px;
+    min-height: 750px;
+    max-height: 750px;
+  }
+
   .hero-img {
     width: 240px;
     height: 240px;
@@ -92,7 +98,7 @@
   }
 
   .project-section {
-    padding-top: 6.4rem;
+    padding-top: 9.4rem;
   }
   .btn,
   .btn:link,
